# execution_context

./: CMakeLists.txt  README.md
benchmark/: tbb_benchmark.cpp  tbb_half_matrix_benchmark.cpp
cmake/: EchoExecutionContextConfig.cmake.in  EchoExecutionContextConfigVersion.cmake.in  FindMKL.cmake
include/echo/: execution_context.h  intel_execution_context.h  mkl_blas_executer.h  mkl_lapack_executer.h  tbb_expression_executer.h
include/echo/execution_context/: allocation_backend.h  blas_executer_concept.h  concept.h  execution_context.h  expression.h  expression_traits.h  lapack_executer_concept.h  matrix_utility.h  option.h  structure.h
include/echo/execution_context/mkl/: blas_executer.h  lapack_executer.h
include/echo/execution_context/tbb/: blocked_range.h  expression_executer.h  for.h
include/echo/execution_context/test/: expression.h
unittest/: concept_test.cpp  intel_execution_context_test.cpp  mkl_blas_executer_test.cpp  mkl_lapack_executer_test.cpp  tbb_blocked_range_test.cpp  tbb_test.cpp
